--- a/streammasterwebui/themes/streammaster/streammaster-base/_base.scss
+++ b/streammasterwebui/themes/streammaster/streammaster-base/_base.scss
@@ -1,5 +1,7 @@
 @import './_fonts';
 @import './_variables';
+@import './_icons';
+@import './_text';
 @import './_standard';
 
 @import './_common';
