--- a/streammasterwebui/themes/streammaster/streammaster-base/_common.scss
+++ b/streammasterwebui/themes/streammaster/streammaster-base/_common.scss
@@ -332,7 +332,25 @@
     height: 4rem !important;
 }
 
+.border-radius-right {
+    border-top-right-radius: $borderRadius;
+    border-bottom-right-radius: $borderRadius;
+    border-color: $headerBg;
+    border-width: 1px;
+    border-style: solid;
+}
+
+.border-radius-left {
+    border-color: $headerBg;
+    border-width: 1px;
+    border-top-left-radius: $borderRadius;
+    border-bottom-left-radius: $borderRadius;
+    border-style: solid;
+}
+
 .p-confirm-popup {
+    padding: 0;
+
     .p-confirm-popup-footer {
         .p-button {
             height: $input-height;
