--- a/streammasterwebui/themes/streammaster/streammaster-base/_sm.scss
+++ b/streammasterwebui/themes/streammaster/streammaster-base/_sm.scss
@@ -97,6 +97,7 @@
 
 
 .sm-scroller-item {
+    height: $input-height;
     border-style: solid;
     border-color: $inputBorderColor;
     border-width: 1px;
@@ -119,6 +120,12 @@
     background-color: $tableHeaderBg !important;
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
+}
+
+.sm-tableHeaderBg {
+    @extend .sm-input-border;
+    background-color: $tableHeaderBg !important;
+
 }
 
 .last_radius {
